# flock-public

./: .dockerignore  .gitattributes  .gitignore  README.md  build_steps.agent.json  config.py  generate_triframe_manifest.py  install.py  main.py  main_src.py  manifest.json  middleman_client.py  observation_simulator.py  operation_handler.py  pyproject.toml  reorganize.py  requirements.txt  run_tasks.py  server.py  settings-example.json  setup.py  state-exp.json  temp.json  temp.py  test_phase.py  test_tournament.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pr-and-main.yaml
.mentat/: precommit.sh  setup.sh
flock/: __main__.py  logger.py  middleman_client.py  observation_simulator.py  operation_handler.py  server.py
flock/handlers/: __init__.py  action.py  base.py  bash.py  generate.py  log.py  observation.py  python.py  save_state.py  scoring.py  submit.py  utility.py
flock/modular/: templates.py
flock/triframe/: context_management.py  functions.py  logging.py  styles.py  templates.py  usage.py
flock/type_defs/: __init__.py  operations.py  phases.py  states.py
flock/utils/: __init__.py  functions.py  logging.py  phase_utils.py  state.py  styles.py
flock/workflows/: __init__.py  executor.py  handlers.py
handlers/: __init__.py  base.py  bash.py  generate.py  log.py  observation.py  python.py  scoring.py  submit.py  utility.py
manifest_utils/: __init__.py  constants.py  generate_manifest.py  generate_modular_manifest.py  generate_triframe_manifest.py  manifest_utils.py  modular_manifest.json  triframe_manifest.json
modular/: __init__.py  templates.py
modular/phases/: actor.py  discriminator.py  generator.py  init_from_settings.py  process_task_hooks.py  prompter.py  tool_output.py
operations_ui/: __init__.py  events.py  server.py
operations_ui/templates/: operations.html
src/flock/: __init__.py  config.py
tests/: utils_test.py
tests/fixtures/: large_state_0.json  large_state_1.json  large_state_2.json  large_state_3.json  triframe_state.json
triframe/: context_management.py  functions.py  logging.py  styles.py  templates.py  usage.py
type_defs/: __init__.py  base.py  operations.py  phases.py  processing.py  states.py
utils/: __init__.py  functions.py  logging.py  phase_utils.py  state.py  styles.py  utils_test.py
workflows/: __init__.py  executor.py  handlers.py
(+54 files in other folders)
