[project]
name = "flock-public"
version = "0.1.0"
requires-python = "~=3.11.0"

dependencies = [
    "aiofiles >=24.1.0",
    "aiohttp >=3.8.0,<4.0.0",
    "astor >=0.8.0,<0.9.0",
    "colorama >=0.4.4,<0.5.0",
    "pyhooks @ git+https://github.com/METR/vivaria.git@abfcd31fa50fada118778e8eb848ca11c8834e44#subdirectory=pyhooks",
    "pydantic >=2.9.2,<3.0.0",
    "requests >=2.26.0,<3.0.0",
    "tiktoken >=0.7.0",
    "typing-extensions >=4.12.2",
    "watchdog >=2.1.0,<6.0.0",
]

[project.optional-dependencies]
ui = [
    "eventlet >=0.30.0,<0.38.0",
    "flask-socketio >=5.0.0,<6.0.0",
    "Flask >=2.0.0,<4.0.0",
]

[dependency-groups]
dev = [
    "mypy >=1.0.0,<2.0.0",
    "pytest >=7.0.0,<9.0.0",
    "pytest-asyncio >=0.23.0,<0.25.0",
    "pytest-watch >=4.2.0,<5.0.0",
    "ruff==0.11.0",
    "types-colorama >=0.4.15,<0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.wheel.packages = ["flock"]
metadata.allow-direct-references = true

[tool.ruff]
lint.select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_column_numbers = true
show_error_codes = true